--- a/public/style.css
+++ b/public/style.css
@@ -13,21 +13,20 @@ body {
 
 .header {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 45% 55%;
   align-items: center;
-  padding: 0 50px;
+  padding: 50px 100px;
   justify-content: center;
   max-height: 100vh;
 }
 
 .header img {
   width: 100%;
-  padding: 80px;
 }
 
 .header__content {
-  max-width: 700px;
-  margin: auto;
+  width: 85%;
+  justify-self: flex-end;
 }
 
 .header__text {
@@ -35,7 +34,6 @@ body {
 }
 
 .header__text h1 {
-  /* margin-bottom: 10px; */
   font-size: 45px;
 }
 
@@ -48,6 +46,7 @@ body {
   padding: 30px;
   display: flex;
   border-radius: 3px;
+  width: 100%;
 }
 
 .header__form input {
@@ -61,6 +60,38 @@ body {
   border: none;
   background-color: #333;
   color: #fff;
+}
+
+.loader {
+  display: none;
+  text-align: center;
+}
+
+.issues {
+  padding: 40px;
+}
+
+.card {
+  border: 1px solid #eee;
+  border-radius: 3px;
+  max-width: 1200px;
+  margin: 20px auto;
+  overflow: hidden;
+}
+
+.card__body {
+  padding: 10px;
+}
+
+.card__content {
+  background-color: #eee;
+  padding: 10px;
+}
+
+.card__title {
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
 }
 
 @media only screen and (max-width: 1200px) {
